--- a/Aula_Git/style.css
+++ b/Aula_Git/style.css
@@ -2,3 +2,9 @@
     padding: 0px;
     margin: 0px;
 }
+
+h1 {
+    color: brown;
+    font-size: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+}
