--- a/Aula_Git/style.css
+++ b/Aula_Git/style.css
@@ -5,6 +5,8 @@
 
 h1 {
     color: brown;
-    font-size: 10%;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 10px;
 }
